--- a/css/style.css
+++ b/css/style.css
@@ -55,16 +55,45 @@
 .content p{
     margin-top: 2px;
     margin-bottom: 1px;
+    font-size: 12px;
 }
 .content p .icon-tel{
     background-image: url('https://w-techn.github.io/ft-assinatura/images/icon-telefone.svg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    width: 12px;
+    height: 12px;
+    margin-right: 10px;
+    display: block;
+    float: left;
 }
 .content p .icon-site{
     background-image: url('https://w-techn.github.io/ft-assinatura/images/icon-site.svg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    width: 12px;
+    height: 12px;
+    margin-right: 10px;
+    display: block;
+    float: left;
 }
 .content p .icon-mail{
     background-image: url('https://w-techn.github.io/ft-assinatura/images/icon-mail.svg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    width: 12px;
+    height: 12px;
+    margin-right: 10px;
+    display: block;
+    float: left;
 }
 .content p .icon-loc{
-    background-image: url('https://w-techn.github.io/ft-assinatura/images/icon-loc.svg');
+    background-image: url('https://w-techn.github.io/ft-assinatura/images/icon-localiza.svg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    width: 12px;
+    height: 12px;
+    margin-right: 10px;
+    display: block;
+    float: left;
 }
